; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/extr_iwl-drv.c_iwl_free_fw_desc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/extr_iwl-drv.c_iwl_free_fw_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_drv = type { i32 }
%struct.fw_desc = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iwl_drv*, %struct.fw_desc*)* @iwl_free_fw_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iwl_free_fw_desc(%struct.iwl_drv* %0, %struct.fw_desc* %1) #0 {
  %3 = alloca %struct.iwl_drv*, align 8
  %4 = alloca %struct.fw_desc*, align 8
  store %struct.iwl_drv* %0, %struct.iwl_drv** %3, align 8
  store %struct.fw_desc* %1, %struct.fw_desc** %4, align 8
  %5 = load %struct.fw_desc*, %struct.fw_desc** %4, align 8
  %6 = getelementptr inbounds %struct.fw_desc, %struct.fw_desc* %5, i32 0, i32 1
  %7 = load i32*, i32** %6, align 8
  %8 = call i32 @vfree(i32* %7)
  %9 = load %struct.fw_desc*, %struct.fw_desc** %4, align 8
  %10 = getelementptr inbounds %struct.fw_desc, %struct.fw_desc* %9, i32 0, i32 1
  store i32* null, i32** %10, align 8
  %11 = load %struct.fw_desc*, %struct.fw_desc** %4, align 8
  %12 = getelementptr inbounds %struct.fw_desc, %struct.fw_desc* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  ret void
}

declare dso_local i32 @vfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
